--- a/Source/SoA/SoA_Editor/Views/CompanyInfoView.xaml
+++ b/Source/SoA/SoA_Editor/Views/CompanyInfoView.xaml
@@ -75,7 +75,7 @@
 
         <StackPanel Grid.Row="3" Grid.Column="1" Margin="10 0 10 0">
             <Label Content="Name:" FontWeight="Bold"/>
-            <TextBox Height="25" x:Name="CompnayName"></TextBox>
+            <TextBox Height="25" x:Name="CompanyName"></TextBox>
         </StackPanel>
 
         <StackPanel Grid.Row="3" Grid.Column="2" Margin="10 0 10 0">
