--- a/Source/SoA/SoA_Editor/Views/RangeView.xaml
+++ b/Source/SoA/SoA_Editor/Views/RangeView.xaml
@@ -4,6 +4,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:SoA_Editor.ViewModels"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" d:DataContext="{d:DesignInstance vm:RangeViewModel}"
              d:DesignHeight="500" d:DesignWidth="800"
              TextElement.Foreground="{DynamicResource MaterialDesignBody}"
@@ -35,6 +37,19 @@
                         SelectionUnit="FullRow" x:Name="RangeGrid" SelectedItem="{Binding Row}"
                         ItemsSource="{Binding RangeGrid}" AutoGenerateColumns="true" IsReadOnly="True"
                         CanUserReorderColumns="True" CanUserSortColumns="True" Margin="0 0 0 5">
+                <DataGrid.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="Delete Range">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="Click">
+                                    <cal:ActionMessage MethodName="DeleteRange">
+                                        <cal:Parameter Value="{Binding Row}" />
+                                    </cal:ActionMessage>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </MenuItem>
+                    </ContextMenu>
+                </DataGrid.ContextMenu>
             </DataGrid>            
         </StackPanel>
         <GroupBox Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" Width="250" HorizontalAlignment="Left" Header="Formula">
